--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html
 
         body
                 #message
-                        h1 Welcome 
+                        h1 Express Accounts 
                         h3 Choose an option below
 
                         div(id="buttons")
