--- a/src/public/style.css
+++ b/src/public/style.css
@@ -9,7 +9,7 @@
 }
 
 h1 {
-    font-size: 75px;
+    font-size: 50px;
     font-family: "Eathoma";
 }
 
@@ -48,6 +48,7 @@ button {
     border:none;
     padding: 8 10;
     margin-bottom: 5px;
+    width: 300px;
 }
 
 button:hover {
